.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/overriddenSchemaConstructor_static.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/overriddenSchemaConstructor_static.ts(10,3): error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)


==== /.src/overriddenSchemaConstructor_static.ts (1 errors) ====
    import * as Schema from "effect/Schema"
    
    export class InvalidBecauseOfConstructor
      extends Schema.Class<InvalidBecauseOfConstructor>("InvalidBecauseOfConstructor")({
        a: Schema.Finite
      })
    {
      b: number
      // should be report here at constructor location
      constructor() {
      ~~~~~~~~~~~
!!! error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)
        super({ a: 42 })
        this.b = 56
      }
    }
    
